please team by committing things

--- a/formcss/default.css
+++ b/formcss/default.css
@@ -12,10 +12,10 @@
 	font-style: normal;
 }
 
-*, *:after, *:before { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
+/**, *:after, *:before { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
 body, html { font-size: 100%; padding: 0; margin: 0;}
 
-/* Clearfix hack by Nicolas Gallagher: http://nicolasgallagher.com/micro-clearfix-hack/ */
+//Clearfix hack by Nicolas Gallagher: http://nicolasgallagher.com/micro-clearfix-hack/ 
 .clearfix:before, .clearfix:after { content: " "; display: table; }
 .clearfix:after { clear: both; }
 
@@ -37,7 +37,6 @@ a:active {
 	color: #333;
 }
 
-/* Header Style */
 .main,
 .container > header {
 	margin: 0 auto;
@@ -63,12 +62,10 @@ a:active {
 	padding: 0 0 0.6em 0.1em;
 }
 
-/* Main Content */
 .main {
 	max-width: 50em;
 }
 
-/* To Navigation Style */
 .codrops-top {
 	background: #fff;
 	background: rgba(255, 255, 255, 0.4);
@@ -138,4 +135,4 @@ a:active {
 		display: none;
 	}
 
-}
+}*/
