--- a/css/general.css
+++ b/css/general.css
@@ -1,4 +1,11 @@
-.boxcover{
+.boxcover {
 	padding: 0em 0.4em 0em 0.4em;
 	background-color: black;
+}
+.lyrics {
+	color: #000 !important;
+	font-size: 24px;
+}
+.cd-slideshow {
+	margin: 0px !important;
 }
