--- a/www/css/general.css
+++ b/www/css/general.css
@@ -1,4 +1,12 @@
-.boxcover{
+.boxcover {
 	padding: 0em 0.4em 0em 0.4em;
+	color: black !important;
 	background-color: black;
+}
+.lyrics {
+	color: #222;
+	font-size: 22pt;
+}
+.cd-slideshow {
+	margin: 0px !important;
 }
