--- a/www/css/general.css
+++ b/www/css/general.css
@@ -2,3 +2,30 @@
 	padding: 0em 0.4em 0em 0.4em;
 	background-color: black;
 }
+
+.navbar-brand {
+    position: absolute;
+    width: 100%;
+    left: 0;
+    top: 0;
+    text-align: center;
+    margin: auto;
+}
+.navbar-toggle {
+    z-index:3;
+}
+
+.jevlainput{
+  display: block;
+  margin: 0;
+  width: 100%;
+  font-family: sans-serif;
+  font-size: 18px;
+  appearance: none;
+  box-shadow: none;
+  border-radius: none;
+}
+.jevlainput:focus {
+  outline: none;
+
+}
