--- a/platforms/browser/www/css/general.css
+++ b/platforms/browser/www/css/general.css
@@ -1,11 +1,19 @@
 .boxcover {
 	padding: 0em 0.4em 0em 0.4em;
+	color: black !important;
 	background-color: black;
 }
 .lyrics {
-	color: #000 !important;
-	font-size: 24px;
+	color: #222;
+	font-size: 22pt;
 }
 .cd-slideshow {
 	margin: 0px !important;
+}
+
+h2 {
+	color: #444;
+}
+h3 {
+	color: #444;
 }
