--- a/www/css/general.css
+++ b/www/css/general.css
@@ -4,7 +4,6 @@
 	background-color: black;
 }
 
-
 .navbar-brand {
     position: absolute;
     width: 100%;
@@ -31,18 +30,22 @@
   outline: none;
 }
 
-.lyrics {
-	color: #222;
-	font-size: 22pt;
-}
+
 .cd-slideshow {
 	margin: 0px !important;
 }
 
 #css-override h2 {
 	color: #444;
+	font-size: 30pt;
+	font-weight: bold;
 }
 #css-override h3 {
 	color: #444;
-
+	font-size: 22pt;
+	margin-top: 0px;
+}
+.lyrics {
+	color: #222;
+	font-size: 22pt;
 }
