--- a/www/css/general.css
+++ b/www/css/general.css
@@ -1,7 +1,7 @@
 #box1, #box2, #box3{
 	padding: 0em 0.4em 0em 0.4em;
 	color: black !important;
-	background-color: white;
+	background-color: black;
 	box-shadow: 0px 0px 10px 3px #efefef;
 	text-shadow: none;
 }
