changed default background color

--- a/www/css/general.css
+++ b/www/css/general.css
@@ -53,16 +53,19 @@
 	margin: 0px 5px;
 }
 #css-override .artist1 {
+	background-color: #111;
     background-image: url("../cvrart/LushLifeBG.png");
     background-size: cover;
     background-position: center; 
 }
 #css-override .artist2 {
+	background-color: #111;
     background-image: url("../cvrart/PandaBG.png");
     background-size: cover;
     background-position: center; 
 }
 #css-override .artist3 {
+	background-color: #111;
     background-image: url("../cvrart/ColdplayBG.png");
     background-size: cover;
     background-position: center; 
