added song title margin

--- a/www/css/general.css
+++ b/www/css/general.css
@@ -45,6 +45,7 @@
 	text-shadow: 2px 2px #222;
 	font-size: 22pt;
 	margin-top: 0px;
+	margin-bottom: 20px;
 }
 #css-override .lyrics {
 	color: #efefef;
