--- a/www/css/buttoncomponent.css
+++ b/www/css/buttoncomponent.css
@@ -15,10 +15,10 @@
 	padding: 0;
 	width: 250px;
 	height: 70px;
-	border: 2px solid #1ECD97;
+	border: 2px solid white;
 	border-radius: 40px;
 	background: transparent;
-	color: #1ECD97;
+	color: white;
 	letter-spacing: 1px;
 	font-size: 18px;
 	font-family: 'Montserrat', sans-serif;
@@ -28,7 +28,7 @@
 }
 
 .progress-button button:hover {
-	background-color: #1ECD97;
+	/*background-color: #1ECD97;*/
 	color: #fff;
 }
 
