--- a/www/css/general.css
+++ b/www/css/general.css
@@ -5,10 +5,11 @@
 	box-shadow: 0px 0px 10px 3px #efefef;
 	text-shadow: none;
 }
-.fadedBox{
-	background-color: transparent !important;
+#css-override .fadedBox{
+	background-color: transparent;
 	box-shadow: none;
-	color: white !important;
+	color: #efefef !important;
+	text-shadow: 2px 2px #222;
 }
 
 .navbar-brand {
