--- a/www/css/general.css
+++ b/www/css/general.css
@@ -1,9 +1,9 @@
 #css-override .boxcover{
 	padding: none !important;
-	color: black !important;
-	background-color: black;
-	box-shadow: 0px 0px 10px 3px #efefef;
+	color: rgba(0,0,0,0) !important;
 	text-shadow: none;
+
+	border-bottom: 2px solid black;
 }
 #css-override .fadedBox{
 	padding: none !important;
